--- a/MyLand.html
+++ b/MyLand.html
@@ -24,30 +24,29 @@
         .info-item p { margin: 0; font-size: 10px; color: #888; text-transform: uppercase; }
         .info-item h4 { margin: 2px 0; font-size: 13px; color: #333; }
 
-        .action-btn { width: 100%; background: #222; color: white; border: none; padding: 14px; border-radius: 15px; font-weight: bold; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 10px; transition: 0.3s; }
+        /* Status Tracking Design */
+        .service-status-box { margin-top: 15px; padding: 12px; border-radius: 15px; background: #f9f9f9; font-size: 12px; text-align: center; border: 1px dashed #ddd; color: #888; transition: 0.3s; }
+        .status-active { background: #E8F5E9; border: 1px solid #A5D6A7; color: #2E7D32; font-weight: bold; border-style: solid; }
+
+        .action-btn { width: 100%; background: #222; color: white; border: none; padding: 14px; border-radius: 15px; font-weight: bold; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 10px; transition: 0.3s; margin-top: 15px; }
         .action-btn:hover { background: var(--primary); }
 
-        /* Modal & Glassmorphism */
+        /* Modal & UI Elements */
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); backdrop-filter: blur(12px); display: none; justify-content: center; align-items: center; z-index: 2000; padding: 20px; }
         .glass-card { background: var(--glass); border-radius: 35px; padding: 30px; width: 100%; max-width: 480px; max-height: 90vh; overflow-y: auto; box-shadow: 0 25px 50px rgba(0,0,0,0.2); border: 1px solid rgba(255,255,255,0.4); scrollbar-width: none; }
-        .glass-card::-webkit-scrollbar { display: none; }
-
         .service-option { width: 100%; padding: 20px; margin-bottom: 15px; border-radius: 22px; border: 1px solid #eee; background: white; cursor: pointer; display: flex; align-items: center; gap: 18px; transition: 0.3s; }
-        .service-option:hover { transform: scale(1.02); border-color: var(--primary); box-shadow: 0 10px 20px rgba(0,0,0,0.05); }
+        .service-option:hover { transform: scale(1.02); border-color: var(--primary); }
         .service-icon { width: 50px; height: 50px; border-radius: 15px; display: flex; align-items: center; justify-content: center; font-size: 22px; }
 
-        /* Expert UI Inputs */
-        .smart-select { width: 100%; padding: 15px; border-radius: 15px; border: 1px solid #ddd; margin-bottom: 15px; font-size: 14px; outline: none; background: white; }
+        .smart-select { width: 100%; padding: 15px; border-radius: 15px; border: 1px solid #ddd; margin-bottom: 15px; font-size: 14px; outline: none; }
         .fert-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
         .fert-box { background: #fff; padding: 10px; border-radius: 12px; border: 1px solid #eee; }
         .fert-box label { font-size: 10px; color: #999; display: block; margin-bottom: 4px; }
         .fert-input { width: 100%; border: none; font-size: 16px; font-weight: bold; color: var(--primary); outline: none; background: transparent; }
         .reason-box { background: #E8F5E9; border-left: 5px solid var(--primary); padding: 15px; border-radius: 12px; margin-top: 20px; font-size: 13px; color: #2E7D32; display: none; line-height: 1.5; }
         
-        /* Glass Prism Success Card Animation */
         .success-prism { background: rgba(255, 255, 255, 0.2); backdrop-filter: blur(25px) saturate(200%); border-radius: 30px; padding: 40px; text-align: center; border: 1px solid rgba(255, 255, 255, 0.3); animation: prismScale 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
         @keyframes prismScale { from { transform: scale(0.7); opacity: 0; } to { transform: scale(1); opacity: 1; } }
-
         .pump-active { animation: pulse 2s infinite; color: #2196F3 !important; }
         @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.5; } 100% { opacity: 1; } }
     </style>
@@ -68,10 +67,9 @@
 
     <script type="module">
         import { auth, db } from './firebase-config.js';
-        import { collection, query, where, onSnapshot, updateDoc, doc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { collection, query, where, onSnapshot, updateDoc, doc, addDoc, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
         import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        // ১. বিশাল শস্য ও জাত ডাটাবেজ (Strictly Original)
         const CROP_DB = {
             'ধান': { varieties: ['ব্রি-ধান ৮৯', 'ব্রি-ধান ২৯', 'বিনা-ধান ১০', 'হাইব্রিড হীরা-২', 'নাজিরশাইল', 'মিনিকেট'], ratios: { urea: 1.1, dap: 0.6, mop: 0.5, gyp: 0.3 } },
             'গম': { varieties: ['বারি গম-৩০', 'বারি গম-৩৩', 'শতাব্দী', 'কাঞ্চন'], ratios: { urea: 0.9, dap: 0.8, mop: 0.4, gyp: 0.2 } },
@@ -81,7 +79,6 @@
             'পেঁয়াজ': { varieties: ['বারি পেঁয়াজ-১', 'লাল তীর কিং', 'সুখসাগর'], ratios: { urea: 1.0, dap: 1.0, mop: 0.8, gyp: 0.4 } }
         };
 
-        // নতুন ড্রোন স্প্রে ডেটাবেজ (রোগ ও কীটনাশক)
         const PEST_DB = {
             'ধান': { 'মাজরা পোকা': ['ভায়াগো', 'বেল্ট এক্সপার্ট'], 'ব্লাস্ট রোগ': ['নাটিভো', 'এমিস্টার টপ'], 'টুংরো': ['টিডো'] },
             'আলু': { 'লেইট ব্লাইট': ['রিডোমিল গোল্ড'], 'কাটুই পোকা': ['ফুরাডান'] },
@@ -102,14 +99,7 @@
                 const container = document.getElementById('land-list');
                 container.innerHTML = "";
                 snaps.forEach(d => {
-                    const data = d.data();
-                    const moisture = data.moistureLevel || 40;
-                    const crop = data.cropName || 'ধান';
-                    if(moisture < 35 && data.pumpStatus !== 'ON') updateDoc(doc(db, 'lands', d.id), {pumpStatus: 'ON'});
-                    if(moisture > 60 && data.pumpStatus !== 'OFF') updateDoc(doc(db, 'lands', d.id), {pumpStatus: 'OFF'});
-                    container.innerHTML += `<div class="land-card">...</div>`; // আগের কার্ড কোডটি ঠিক থাকবে
-                    // (কার্ড রেন্ডারিং পার্ট একদম আপনার আগের মতো থাকবে)
-                    renderCard(d.id, data);
+                    renderCard(d.id, d.data());
                 });
             });
         }
@@ -118,7 +108,9 @@
             const container = document.getElementById('land-list');
             const crop = data.cropName || 'ধান';
             const moisture = data.moistureLevel || 40;
-            container.innerHTML += `
+            
+            // কার্ড রেন্ডার করা
+            const cardHtml = `
                 <div class="land-card">
                     <div class="card-banner">
                         <img src="${cropImages[crop] || cropImages.default}">
@@ -136,18 +128,64 @@
                             <div class="info-item"><p>পাম্প</p><h4 class="${data.pumpStatus==='ON'?'pump-active':''}">${data.pumpStatus || 'OFF'}</h4></div>
                             <div class="info-item"><p>এলাকা</p><h4>${data.area} শতক</h4></div>
                         </div>
+
+                        <div id="status-${id}" class="service-status-box">চলমান কোনো সার্ভিস নেই</div>
+
                         <button class="action-btn" onclick="openServiceMenu('${id}', '${data.name}', ${data.area}, '${crop}')">
                             <i class="fas fa-th-large"></i> সার্ভিস নিন
                         </button>
                     </div>
                 </div>`;
+            container.innerHTML += cardHtml;
+
+            // এই কার্ডের জন্য আলাদা অর্ডার লিসেনার
+            const orderQ = query(collection(db, "orders"), where("landId", "==", id), where("status", "in", ["PENDING", "PROCESSING"]));
+            onSnapshot(orderQ, (orderSnaps) => {
+                const statusBox = document.getElementById(`status-${id}`);
+                if(!statusBox) return;
+
+                if(orderSnaps.empty) {
+                    statusBox.innerHTML = "চলমান কোনো সার্ভিস নেই";
+                    statusBox.className = "service-status-box";
+                } else {
+                    const order = orderSnaps.docs[0].data();
+                    statusBox.innerHTML = `<i class="fas fa-sync-alt fa-spin"></i> ${order.serviceType}: ${order.status === 'PENDING' ? 'অপেক্ষা করুন...' : 'কাজ চলছে'}`;
+                    statusBox.className = "service-status-box status-active";
+                }
+            });
         }
 
+        // --- অর্ডার সেভ লজিক ---
+        window.confirmWithPrism = async (type) => {
+            const { id, name, area, crop } = window.currentLand;
+            const orderData = {
+                landId: id,
+                landName: name,
+                serviceType: type,
+                status: 'PENDING',
+                timestamp: new Date().getTime(),
+                userId: auth.currentUser.uid
+            };
+
+            try {
+                await addDoc(collection(db, "orders"), orderData);
+                document.getElementById('modalTitle').innerText = "স্ট্যাটাস";
+                document.getElementById('modalContent').innerHTML = `
+                    <div class="success-prism">
+                        <i class="fas fa-check-circle" style="font-size: 50px; color:#4CAF50; margin-bottom:15px; display:block;"></i>
+                        <h3 style="margin:0;">অর্ডার সফল!</h3>
+                        <p style="font-size:13px; color:#666;">আপনার ${type} রিকোয়েস্টটি গ্রহণ করা হয়েছে।</p>
+                        <button class="action-btn" style="margin-top:20px;" onclick="closeModal()">ঠিক আছে</button>
+                    </div>`;
+            } catch (e) { alert("Error: " + e.message); }
+        };
+
+        // বাকি মেনু ফাংশনগুলো আগের মতোই আছে
         window.openServiceMenu = (id, name, area, crop) => {
             window.currentLand = { id, name, area, crop };
             document.getElementById('modalTitle').innerText = "সার্ভিস নির্বাচন করুন";
             document.getElementById('modalContent').innerHTML = `
-                <div class="service-option" onclick="showDroneOptions()"><div class="service-icon" style="background:#E8F5E9; color:#2E7D32;"><i class="fas fa-helicopter"></i></div><div><b>ড্রোন স্প্রে সার্ভিস</b><p style="margin:0; font-size:11px; color:#888;">সার ও কীটনাশক প্রয়োগ</p></div></div>
+                <div class="service-option" onclick="showDroneOptions()"><div class="service-icon" style="background:#E8F5E9; color:#2E7D32;"><i class="fas fa-helicopter"></i></div><div><b>ড্রোন স্প্রে সার্ভিস</b><p style="margin:0; font-size:11px; color:#888;">সার ও কীটনাশক প্রয়োগ</p></div></div>
                 <div class="service-option" onclick="openHalchashMenu()"><div class="service-icon" style="background:#FFF3E0; color:#EF6C00;"><i class="fas fa-tractor"></i></div><div><b>স্মার্ট হালচাষ</b><p style="margin:0; font-size:11px; color:#888;">আধুনিক প্রযুক্তিতে জমি তৈরি</p></div></div>
                 <div class="service-option" onclick="confirmWithPrism('ফসল কাটা')"><div class="service-icon" style="background:#E3F2FD; color:#1565C0;"><i class="fas fa-wheat-awn"></i></div><div><b>আধুনিক ফসল কাটা</b><p style="margin:0; font-size:11px; color:#888;">কম্বাইন হার্ভেস্টার সার্ভিস</p></div></div>`;
             document.getElementById('serviceModal').style.display = 'flex';
@@ -155,12 +193,11 @@
 
         window.showDroneOptions = () => {
             document.getElementById('modalContent').innerHTML = `
-                <div class="service-option" onclick="openFertilizerExpert()"><div class="service-icon" style="background:#F3E5F5; color:#7B1FA2;"><i class="fas fa-flask"></i></div><div><b>সায়েন্টিফিক সার প্রয়োগ</b><p style="margin:0; font-size:11px; color:#888;">জাত ভিত্তিক হিসাব</p></div></div>
-                <div class="service-option" onclick="openPesticideExpert()"><div class="service-icon" style="background:#FFEBEE; color:#C62828;"><i class="fas fa-bug"></i></div><div><b>কীটনাশক স্প্রে</b><p style="margin:0; font-size:11px; color:#888;">রোগ অনুযায়ী সমাধান</p></div></div>
+                <div class="service-option" onclick="openFertilizerExpert()"><div class="service-icon" style="background:#F3E5F5; color:#7B1FA2;"><i class="fas fa-flask"></i></div><div><b>সায়েন্টিফিক সার প্রয়োগ</b><p style="margin:0; font-size:11px; color:#888;">জাত ভিত্তিক হিসাব</p></div></div>
+                <div class="service-option" onclick="openPesticideExpert()"><div class="service-icon" style="background:#FFEBEE; color:#C62828;"><i class="fas fa-bug"></i></div><div><b>কীটনাশক স্প্রে</b><p style="margin:0; font-size:11px; color:#888;">রোগ অনুযায়ী সমাধান</p></div></div>
                 <button class="action-btn" style="background:#eee; color:#666;" onclick="openServiceMenu(window.currentLand.id, window.currentLand.name, window.currentLand.area, window.currentLand.crop)">পিছনে যান</button>`;
         };
 
-        // কীটনাশক লজিক (New)
         window.openPesticideExpert = () => {
             const crop = window.currentLand.crop;
             const diseases = PEST_DB[crop] || PEST_DB['ধান'];
@@ -180,7 +217,6 @@
             document.getElementById('medContainer').innerHTML = `<select id="medSelect" class="smart-select">${meds.map(m => `<option value="${m}">${m}</option>`).join('')}</select>`;
         };
 
-        // হালচাষ মেনু (New)
         window.openHalchashMenu = () => {
             document.getElementById('modalTitle').innerText = "স্মার্ট হালচাষ (" + window.currentLand.crop + ")";
             document.getElementById('modalContent').innerHTML = `
@@ -190,19 +226,6 @@
                 <button class="action-btn" onclick="confirmWithPrism('হালচাষ')">অর্ডার নিশ্চিত করুন</button>`;
         };
 
-        // সাকসেস কার্ড পপ-আপ (New)
-        window.confirmWithPrism = (type) => {
-            document.getElementById('modalTitle').innerText = "স্ট্যাটাস";
-            document.getElementById('modalContent').innerHTML = `
-                <div class="success-prism">
-                    <i class="fas fa-check-circle" style="font-size: 50px; color:#4CAF50; margin-bottom:15px; display:block;"></i>
-                    <h3 style="margin:0;">অর্ডার সফল!</h3>
-                    <p style="font-size:13px; color:#666;">আপনার ${type} রিকোয়েস্টটি গ্রহণ করা হয়েছে।</p>
-                    <button class="action-btn" style="margin-top:20px;" onclick="closeModal()">ঠিক আছে</button>
-                </div>`;
-        };
-
-        // সায়েন্টিফিক সার লজিক (Strictly Unchanged)
         window.openFertilizerExpert = () => {
             const crop = window.currentLand.crop;
             const cropData = CROP_DB[crop] || CROP_DB['ধান'];
@@ -242,12 +265,12 @@
             document.getElementById('dInp').value = (d * area).toFixed(1);
             document.getElementById('mInp').value = (m * area).toFixed(1);
             document.getElementById('gInp').value = (base.gyp * area).toFixed(1);
-            document.getElementById('reasonBox').innerHTML = `<b>সায়েন্টিফিক আপডেট:</b> ${varName} এর জন্য হিসাব অপ্টিমাইজড।`;
+            document.getElementById('reasonBox').innerHTML = `<b>সায়েন্টিফিক আপডেট:</b> ${varName} এর জন্য হিসাব অপ্টিমাইজড।`;
             document.getElementById('reasonBox').style.display = 'block';
         };
 
         window.closeModal = () => document.getElementById('serviceModal').style.display = 'none';
-        window.confirmOrder = () => confirmWithPrism('সায়েন্টিফিক সার');
+        window.confirmOrder = () => confirmWithPrism('সায়েন্টিফিক সার');
 
     </script>
 </body>
